2012-01-10  Rene Liebscher <R.Liebscher@gmx.de>

	patch #7699 Read additional config files
	* main.c: Added reading of additional config files
	* avrdude.1: updated man page
	* doc/avrdude.texi: updated documentation

2012-01-10  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Bob Frazier:
	bug #35208: avrdude 5.11 on freebsd 8.2-STABLE does not reset
	Arduino Uno properly
	* arduino.c (arduino_open): Bump the timeout between pulling
	the DTR and RTS lines low and high.

2012-01-08  Rene Liebscher <R.Liebscher@gmx.de>

	Fixed following findings reported by cppcheck
	* avr910.c:625 (error) Possible null pointer dereference: cmd - otherwise it is redundant to check if cmd is null at line 624
	* avr910.c:626 (error) Possible null pointer dereference: cmd - otherwise it is redundant to check if cmd is null at line 624
	* avr910.c:168 (information) The scope of the variable 'devtype_1st' can be reduced
	* avr910.c:169 (information) The scope of the variable 'dev_supported' can be reduced
	* avrftdi.c:647 (error) Using sizeof for array given as function argument returns the size of pointer.
	* stk500v2.c:3347 (error) Memory leak: b
	* stk500v2.c:3452 (error) Memory leak: b
	* usbasp.c:554 (error) Using sizeof for array given as function argument returns the size of pointer.
	* usbasp.c:485 (information) The scope of the variable 'dly' can be reduced

2012-01-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Reported by Jason Kotzin:
	* usbasp.c (usbasp_spi_paged_load, usbasp_spi_paged_write):
	Fix buffer address calculation.

2012-01-03  Rene Liebscher <R.Liebscher@gmx.de>

	patch #7629 add support for atmega48p
	* avrdude.conf.in: Added m48p with parent m48 + different signature
	
	* avrdude.conf.in: made part parents (m88p = m88 + different signature,
	m168p = m168 + different signature)

2012-01-02  Rene Liebscher <R.Liebscher@gmx.de>

	bug #21663 AT90PWM efuse incorrect
	bug #30438 efuse bits written as 0 on at90pwmxx parts